              Apache Commons Parent 40
                  RELEASE NOTES

The Apache Commons Parent team is pleased to announce the release of Apache Commons Parent 40

The Apache Commons Parent POM provides common settings for all Apache Commons components.

Updates plugins and parent; fixes COMMONSSITE-87

Changes in this version include:

Changes:
o                   Update Apache Parent POM : 16 -> 17
o                   COMMONSSITE-87 - ensure assembly plugin runs after all package phase plugins
o                   maven-release-plugin 2.5.2 -> 2.5.3
o                   buildnumber-maven-plugin 1.3 -> 1.4 (supports git SCM now)
o                   maven-assembly-plugin 2.5.5 -> 2.6
o                   maven-surefire-plugin 2.18.1 -> 2.19.1
o                   maven-compiler-plugin : 3.3 -> 3.5.1
o                   maven-changes-plugin : 2.11 -> 2.12
o                   commons-build-plugin : 1.4 -> 1.5
o                   felix:maven-bundle-plugin : 2.5.3 -> 3.0.0
o                   maven-enforcer-plugin : 1.3.1 -> 1.4.1
o                   maven-project-info-reports-plugin : 2.8 -> 2.9
o                   maven-source-plugin : 2.4 -> 3.0.0
o                   animal-sniffer-maven-plugin : 1.11 -> 1.15
o                   build-helper-maven-plugin : 1.9.1 -> 1.10
o                   clirr-maven-plugin : 2.6.1 -> 2.7
o                   jacoco-maven-plugin : 0.7.5.201505241946 -> 0.7.6.201602180812
o                   maven-clean-plugin : 2.6.1 -> 3.0.0
o                   Require minimum of Maven 3.0.5


Historical list of changes: http://commons.apache.org/changes-report.html

For complete information on Apache Commons Parent, including instructions on how to submit bug reports,
patches, or suggestions for improvement, see the Apache Apache Commons Parent website:

http://commons.apache.org/