@@ -59,9 +59,10 @@ The <action> type attribute can be add,update,fix,remove.
      -->
 
     <body>
-        <release version="40" date="2016-04-20" description="Updates plugins and parent; fixes COMMONSSITE-87">
+        <release version="40" date="2016-04-24" description="Updates plugins and parent; fixes COMMONSSITE-87 and COMMONSSITE-82">
             <action type="update">Update Apache Parent POM : 16 -> 17</action>
             <action type="update">COMMONSSITE-87 - ensure assembly plugin runs after all package phase plugins</action>
+            <action type="update">COMMONSSITE-82 - use Commons Skin 4.1 (site.xml)</action>
             <action type="update">maven-release-plugin 2.5.2 -> 2.5.3</action>
             <action type="update">buildnumber-maven-plugin 1.3 -> 1.4 (supports git SCM now)</action>
             <action type="update">maven-assembly-plugin 2.5.5 -> 2.6</action>
